# rust_intervals

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  Makefile.toml  README.md
.github/workflows/: rust.yml  tests.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_intervals.rs  fuzz_intervalsets.rs  fuzz_support.rs  fuzz_target_1.rs  fuzz_target_multi.rs
src/: bounds.rs  chrono.rs  decimal.rs  intervals.rs  iterator.rs  leftmostiter.rs  lib.rs  multi.rs  multi_intervals.rs  multi_joining.rs  multi_separating.rs  nothing_between.rs  pairs.rs  serde.rs  step.rs  tests.rs
