[package]
authors = ["Emmanuel Briot <briot.emmanuel@gmail.com>"]
description = "Intervals arithmetic with any combination of open, closed or infinite bounds, along with operations like intersection, convex hull, union, difference,..."
documentation = "https://docs.rs/rust_intervals/"
repository = "https://github.com/briot/rust_intervals"
readme = "./README.md"
name = "rust_intervals"
version = "0.1.1"
edition = "2018"
license = "MIT"
keywords = ["intervals", "open-closed", "ranges", "intersection", "convex_hull"]

[dependencies]
chrono = { version = "0.4.24", optional = true }
serde = { default-features = false, features = [ "derive" ], optional = true, version = "1.0" }

[dev-dependencies]
serde_json = "1.0"
ron = "0.8"

[features]
default = ["std"]
serde = ["dep:serde"]
std = []
