[package]
authors = ["Emmanuel Briot <briot.emmanuel@gmail.com>"]
description = "Intervals arithmetic with any combination of open, closed or infinite bounds, along with operations like intersection, convex hull, union, difference,..."
documentation = "https://docs.rs/rust_intervals/"
repository = "https://github.com/briot/rust_intervals"
readme = "./README.md"
name = "rust_intervals"
version = "0.7.0"
edition = "2018"
license = "MIT"
keywords = ["intervals", "open-closed", "ranges", "intersection", "convex_hull"]

[dependencies]
chrono = { version = "0.4.24", optional = true }
ron = { version = "0.8", optional = true }
rust_decimal = { version = "1.0", optional = true }
serde = { default-features = false, features = [ "derive" ], optional = true, version = "1.0" }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
mutants = "0.0.3"

[features]
default = ["std"]
rust_decimal = ["dep:rust_decimal"]
serde = ["dep:serde"]
serde_tests = ["serde", "dep:serde_json", "dep:ron"]
std = []

[lints.clippy]
perf = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
alloc_instead_of_core = "allow"
all = "allow"
complexity = "allow"
style = "allow"
pedantic = "allow"
cargo = "allow"
unwrap_used = "deny"
