[package]
name = "rust_intervals-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { features = ["derive"], version = "1.0" }
libfuzzer-sys = "0.4"
rust_intervals = { path = ".." }

[[bin]]
name = "fuzz_intervals"
path = "fuzz_targets/fuzz_intervals.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_intervalsets"
path = "fuzz_targets/fuzz_intervalsets.rs"
test = false
doc = false
bench = false
